--- a/front/package.json
+++ b/front/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@ant-design/charts": "^2.2.6",
     "@ant-design/icons": "^5.6.0",
+    "@ant-design/plots": "^2.3.3",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.2",
     "@mui/x-charts": "^7.25.0",
+    "@nivo/line": "^0.89.1",
     "@react-google-maps/api": "^2.20.5",
     "@tailwindcss/vite": "^4.0.0",
     "@vitejs/plugin-react": "^4.3.4",
