--- a/front/package.json
+++ b/front/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-router-dom": "^6.28.2",
+    "recharts": "^2.15.3",
     "sweetalert2": "^11.15.10",
     "tailwindcss": "^4.0.0"
   },
