--- a/api/package.json
+++ b/api/package.json
@@ -21,6 +21,7 @@
         "express-rate-limit": "^7.5.0",
         "fs": "^0.0.1-security",
         "gridfs-stream": "^1.1.1",
+        "json2csv": "^6.0.0-alpha.2",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.12.1",
         "multer": "^1.4.5-lts.1",
